Adding support for global and thread context stacks for log4net
Adding support for global and thread context stacks for log4net.
This is for https://github.com/Azure/diagnostics-eventflow/issues/287

--- a/src/Microsoft.Diagnostics.EventFlow.Consumers.ConsoleApp/eventFlowConfig.json
+++ b/src/Microsoft.Diagnostics.EventFlow.Consumers.ConsoleApp/eventFlowConfig.json
@@ -20,6 +20,12 @@
       ]
     },
     {
+      "type": "Log4net",
+      "logLevel": "Debug",
+      "globalContextName": "GlobalContext",
+      "logicalThreadContextName": "LogicalThreadContext"
+    },
+    {
       "type": "PerformanceCounter",
       "counters": [
         {
